--- a/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/PersonCore.storyboard
+++ b/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/PersonCore.storyboard
@@ -337,6 +337,14 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VCy-eW-pxf">
+                                                <rect key="frame" x="304" y="113" width="70" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="70" id="bcs-Le-d3z"/>
+                                                    <constraint firstAttribute="height" constant="30" id="dS1-xB-c8H"/>
+                                                </constraints>
+                                                <state key="normal" title="星级分"/>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -354,6 +362,7 @@
                                             <constraint firstItem="xiD-60-gI4" firstAttribute="top" secondItem="EUL-mJ-Wjk" secondAttribute="bottom" constant="25" id="Ok9-tb-aad"/>
                                             <constraint firstItem="kBF-LV-Tp6" firstAttribute="top" secondItem="t2E-xR-dmq" secondAttribute="bottom" constant="1" id="RGJ-w0-HW8"/>
                                             <constraint firstAttribute="trailing" secondItem="YhN-kq-U4F" secondAttribute="trailing" id="VaB-ow-rHV"/>
+                                            <constraint firstItem="t2E-xR-dmq" firstAttribute="top" secondItem="VCy-eW-pxf" secondAttribute="bottom" constant="5" id="YlW-HE-fRf"/>
                                             <constraint firstItem="xiD-60-gI4" firstAttribute="centerX" secondItem="zd7-xf-n4r" secondAttribute="centerX" id="aoG-4z-Aup"/>
                                             <constraint firstItem="Ll6-HV-QUM" firstAttribute="leading" secondItem="Q2H-fw-ZRu" secondAttribute="leading" id="bLg-Vq-4Se"/>
                                             <constraint firstAttribute="bottom" secondItem="Ll6-HV-QUM" secondAttribute="bottom" constant="44" id="cr2-mK-37e"/>
@@ -362,6 +371,7 @@
                                             <constraint firstItem="EUL-mJ-Wjk" firstAttribute="top" secondItem="rwy-xP-mT0" secondAttribute="bottom" constant="1" id="jhs-0S-6II"/>
                                             <constraint firstItem="qpz-Vi-Xvw" firstAttribute="centerX" secondItem="zd7-xf-n4r" secondAttribute="centerX" id="k53-Ef-fcY"/>
                                             <constraint firstItem="YhN-kq-U4F" firstAttribute="top" secondItem="Q2H-fw-ZRu" secondAttribute="top" id="kKQ-lY-liE"/>
+                                            <constraint firstAttribute="trailing" secondItem="VCy-eW-pxf" secondAttribute="trailing" id="ka8-5O-ief"/>
                                             <constraint firstAttribute="trailing" secondItem="EUL-mJ-Wjk" secondAttribute="trailing" id="oe7-pE-2lK"/>
                                             <constraint firstItem="YhN-kq-U4F" firstAttribute="leading" secondItem="Q2H-fw-ZRu" secondAttribute="leading" id="opP-6J-d5v"/>
                                             <constraint firstItem="EUL-mJ-Wjk" firstAttribute="leading" secondItem="Q2H-fw-ZRu" secondAttribute="leading" id="qco-Pq-gZo"/>
