--- a/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/PersonCore.storyboard
+++ b/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/PersonCore.storyboard
@@ -49,6 +49,68 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YhN-kq-U4F">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="128"/>
                                                 <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d8R-mg-Dne">
+                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="128"/>
+                                                        <connections>
+                                                            <action selector="PersonDetailButtonClick:" destination="GTU-aq-x3y" eventType="touchUpInside" id="oro-wW-r09"/>
+                                                        </connections>
+                                                    </button>
+                                                    <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xp4-Yo-JXC" userLabel="stars1">
+                                                        <rect key="frame" x="169" y="25" width="140" height="25"/>
+                                                        <subviews>
+                                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WLu-lm-uoe">
+                                                                <rect key="frame" x="5" y="3" width="18" height="20"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="20" id="216-i2-Ilp"/>
+                                                                </constraints>
+                                                                <state key="normal" image="star拷贝8"/>
+                                                                <state key="selected" image="star拷贝7"/>
+                                                            </button>
+                                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qKy-DQ-pxF">
+                                                                <rect key="frame" x="33" y="3" width="18" height="20"/>
+                                                                <state key="normal" image="star拷贝8"/>
+                                                                <state key="selected" image="star拷贝7"/>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g6f-KJ-8Y1">
+                                                                <rect key="frame" x="61" y="3" width="18" height="20"/>
+                                                                <state key="normal" image="star拷贝8"/>
+                                                                <state key="selected" image="star拷贝7"/>
+                                                            </button>
+                                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jmq-OY-kIq">
+                                                                <rect key="frame" x="89" y="3" width="18" height="20"/>
+                                                                <state key="normal" image="star拷贝8"/>
+                                                                <state key="selected" image="star拷贝7"/>
+                                                            </button>
+                                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XIa-XL-if4">
+                                                                <rect key="frame" x="117" y="3" width="18" height="20"/>
+                                                                <state key="normal" image="star拷贝8"/>
+                                                                <state key="selected" image="star拷贝7"/>
+                                                            </button>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstItem="jmq-OY-kIq" firstAttribute="width" secondItem="WLu-lm-uoe" secondAttribute="width" id="0PK-4G-dbJ"/>
+                                                            <constraint firstItem="XIa-XL-if4" firstAttribute="centerY" secondItem="xp4-Yo-JXC" secondAttribute="centerY" id="0wl-ks-kyS"/>
+                                                            <constraint firstItem="g6f-KJ-8Y1" firstAttribute="centerY" secondItem="xp4-Yo-JXC" secondAttribute="centerY" id="52k-9c-vdX"/>
+                                                            <constraint firstItem="g6f-KJ-8Y1" firstAttribute="leading" secondItem="qKy-DQ-pxF" secondAttribute="trailing" constant="10" id="9Iz-yD-lo8"/>
+                                                            <constraint firstItem="XIa-XL-if4" firstAttribute="leading" secondItem="jmq-OY-kIq" secondAttribute="trailing" constant="10" id="F1X-BO-baY"/>
+                                                            <constraint firstAttribute="trailing" secondItem="XIa-XL-if4" secondAttribute="trailing" constant="5" id="FL3-hB-drH"/>
+                                                            <constraint firstAttribute="height" constant="25" id="G6v-H0-VAS"/>
+                                                            <constraint firstItem="g6f-KJ-8Y1" firstAttribute="height" secondItem="WLu-lm-uoe" secondAttribute="height" id="ImM-yO-JWr"/>
+                                                            <constraint firstItem="WLu-lm-uoe" firstAttribute="centerY" secondItem="xp4-Yo-JXC" secondAttribute="centerY" id="NIX-I8-XCC"/>
+                                                            <constraint firstItem="jmq-OY-kIq" firstAttribute="height" secondItem="WLu-lm-uoe" secondAttribute="height" id="NXF-4R-xpP"/>
+                                                            <constraint firstItem="qKy-DQ-pxF" firstAttribute="centerY" secondItem="xp4-Yo-JXC" secondAttribute="centerY" id="T4i-Kr-qKz"/>
+                                                            <constraint firstItem="WLu-lm-uoe" firstAttribute="leading" secondItem="xp4-Yo-JXC" secondAttribute="leading" constant="5" id="VNa-Ll-oGq"/>
+                                                            <constraint firstItem="qKy-DQ-pxF" firstAttribute="height" secondItem="WLu-lm-uoe" secondAttribute="height" id="brS-KC-GZK"/>
+                                                            <constraint firstItem="g6f-KJ-8Y1" firstAttribute="width" secondItem="WLu-lm-uoe" secondAttribute="width" id="ei3-aX-GLW"/>
+                                                            <constraint firstAttribute="width" constant="140" id="j5T-Ed-t81"/>
+                                                            <constraint firstItem="XIa-XL-if4" firstAttribute="width" secondItem="WLu-lm-uoe" secondAttribute="width" id="oyz-JB-TQ7"/>
+                                                            <constraint firstItem="jmq-OY-kIq" firstAttribute="centerY" secondItem="xp4-Yo-JXC" secondAttribute="centerY" id="p2d-BD-tIx"/>
+                                                            <constraint firstItem="jmq-OY-kIq" firstAttribute="leading" secondItem="g6f-KJ-8Y1" secondAttribute="trailing" constant="10" id="sRj-Fe-5oI"/>
+                                                            <constraint firstItem="qKy-DQ-pxF" firstAttribute="leading" secondItem="WLu-lm-uoe" secondAttribute="trailing" constant="10" id="vTE-oZ-x3X"/>
+                                                            <constraint firstItem="qKy-DQ-pxF" firstAttribute="width" secondItem="WLu-lm-uoe" secondAttribute="width" id="vpk-x5-Bxi"/>
+                                                            <constraint firstItem="XIa-XL-if4" firstAttribute="height" secondItem="WLu-lm-uoe" secondAttribute="height" id="xDu-H6-CNg"/>
+                                                        </constraints>
+                                                    </view>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="userIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Ood-Zj-6od">
                                                         <rect key="frame" x="12" y="24" width="80" height="80"/>
                                                         <constraints>
@@ -57,13 +119,13 @@
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="贺思佳" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oyz-p8-faX">
-                                                        <rect key="frame" x="117" y="24" width="67" height="27"/>
+                                                        <rect key="frame" x="97" y="24" width="67" height="27"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="账号: zhanglizi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OeV-ba-tFG">
-                                                        <rect key="frame" x="117" y="81" width="124" height="23"/>
+                                                        <rect key="frame" x="97" y="81" width="124" height="23"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -75,26 +137,30 @@
                                                             <constraint firstAttribute="height" constant="40" id="kI3-cC-dcb"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d8R-mg-Dne">
-                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="128"/>
-                                                        <connections>
-                                                            <action selector="PersonDetailButtonClick:" destination="GTU-aq-x3y" eventType="touchUpInside" id="oro-wW-r09"/>
-                                                        </connections>
-                                                    </button>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="五星管家" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IO8-hj-e9o">
+                                                        <rect key="frame" x="210.5" y="50" width="57.5" height="17"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
+                                                    <constraint firstItem="IO8-hj-e9o" firstAttribute="top" secondItem="xp4-Yo-JXC" secondAttribute="bottom" id="1Fi-1H-F6m"/>
                                                     <constraint firstItem="Ood-Zj-6od" firstAttribute="leading" secondItem="YhN-kq-U4F" secondAttribute="leading" constant="12" id="2gC-BM-mPZ"/>
                                                     <constraint firstItem="OeV-ba-tFG" firstAttribute="bottom" secondItem="Ood-Zj-6od" secondAttribute="bottom" id="47L-rG-FPr"/>
                                                     <constraint firstItem="Oyz-p8-faX" firstAttribute="top" secondItem="Ood-Zj-6od" secondAttribute="top" id="7zD-aV-fVj"/>
                                                     <constraint firstItem="Ood-Zj-6od" firstAttribute="centerY" secondItem="YhN-kq-U4F" secondAttribute="centerY" id="MaH-Is-BaI"/>
                                                     <constraint firstItem="Tou-eZ-ky5" firstAttribute="centerY" secondItem="YhN-kq-U4F" secondAttribute="centerY" id="RSj-oW-FlX"/>
                                                     <constraint firstAttribute="height" constant="128" id="Ve4-vv-myU"/>
-                                                    <constraint firstItem="Oyz-p8-faX" firstAttribute="leading" secondItem="Ood-Zj-6od" secondAttribute="trailing" constant="25" id="YAe-1D-c96"/>
+                                                    <constraint firstItem="Oyz-p8-faX" firstAttribute="leading" secondItem="Ood-Zj-6od" secondAttribute="trailing" constant="5" id="YAe-1D-c96"/>
                                                     <constraint firstItem="d8R-mg-Dne" firstAttribute="top" secondItem="YhN-kq-U4F" secondAttribute="top" id="dcA-Al-c2g"/>
                                                     <constraint firstAttribute="bottom" secondItem="d8R-mg-Dne" secondAttribute="bottom" id="dnc-AW-gOh"/>
+                                                    <constraint firstItem="IO8-hj-e9o" firstAttribute="centerX" secondItem="xp4-Yo-JXC" secondAttribute="centerX" id="huH-FB-Gcs"/>
                                                     <constraint firstAttribute="trailing" secondItem="d8R-mg-Dne" secondAttribute="trailing" id="iDs-T4-grg"/>
+                                                    <constraint firstItem="xp4-Yo-JXC" firstAttribute="leading" secondItem="Oyz-p8-faX" secondAttribute="trailing" constant="5" id="khc-0t-HwP"/>
                                                     <constraint firstItem="d8R-mg-Dne" firstAttribute="leading" secondItem="YhN-kq-U4F" secondAttribute="leading" id="m8u-or-NcS"/>
+                                                    <constraint firstItem="xp4-Yo-JXC" firstAttribute="centerY" secondItem="Oyz-p8-faX" secondAttribute="centerY" id="ssr-9b-iBP"/>
                                                     <constraint firstAttribute="trailing" secondItem="Tou-eZ-ky5" secondAttribute="trailing" constant="15" id="tWD-fd-bWA"/>
                                                     <constraint firstItem="OeV-ba-tFG" firstAttribute="leading" secondItem="Oyz-p8-faX" secondAttribute="leading" id="uSa-Oz-hOO"/>
                                                 </constraints>
@@ -344,6 +410,9 @@
                                                     <constraint firstAttribute="height" constant="30" id="dS1-xB-c8H"/>
                                                 </constraints>
                                                 <state key="normal" title="星级分"/>
+                                                <connections>
+                                                    <action selector="starServicerButtonClick:" destination="GTU-aq-x3y" eventType="touchUpInside" id="f3m-p4-bht"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -784,6 +853,8 @@
         <image name="larr" width="30" height="30"/>
         <image name="me_active" width="20" height="20"/>
         <image name="me_normal" width="20" height="20"/>
+        <image name="star拷贝7" width="22" height="22"/>
+        <image name="star拷贝8" width="22" height="22"/>
         <image name="userIcon" width="200" height="200"/>
     </resources>
 </document>
