总经理邮箱的整体的UI框架和布局,init_OK

--- a/OpticalValleyUnite/Classes/UI/GeneralManagerMailbox/ViewController/YQGeneralManagerFirstVC.xib
+++ b/OpticalValleyUnite/Classes/UI/GeneralManagerMailbox/ViewController/YQGeneralManagerFirstVC.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQGeneralManagerFirstVC" customModule="OpticalValleyUnite" customModuleProvider="target">
             <connections>
+                <outlet property="baseScrollViewHeightConstast" destination="Rx8-b1-8DW" id="Xnp-a5-Sah"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cob-qR-Rmy">
-                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yis-Au-6j5">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="600"/>
@@ -160,7 +161,7 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="cob-qR-Rmy" secondAttribute="trailing" id="5Vv-YH-pZb"/>
                 <constraint firstItem="yis-Au-6j5" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="96F-ka-6wv"/>
-                <constraint firstItem="cob-qR-Rmy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="apk-Bo-ENS"/>
+                <constraint firstItem="cob-qR-Rmy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="apk-Bo-ENS"/>
                 <constraint firstItem="cob-qR-Rmy" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="wN0-sV-RUx"/>
                 <constraint firstAttribute="bottom" secondItem="cob-qR-Rmy" secondAttribute="bottom" id="zIA-a9-VuS"/>
             </constraints>
