--- a/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/YQFeedDetailVC.xib
+++ b/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/YQFeedDetailVC.xib
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQFeedDetailVC" customModule="OpticalValleyUnite" customModuleProvider="target">
             <connections>
                 <outlet property="contentTextView" destination="ODP-yK-CVB" id="w2a-pA-pru"/>
+                <outlet property="headViewConstraint" destination="RBv-zA-nWQ" id="uiY-jn-AXs"/>
                 <outlet property="showImageView" destination="3qa-pS-4zK" id="OLS-YU-BwF"/>
                 <outlet property="timeLabel" destination="mrz-6C-q2A" id="dpw-nw-wVc"/>
                 <outlet property="titleLabel" destination="Td1-1K-sUg" id="9cB-N2-9Dr"/>
@@ -24,16 +25,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bdk-mS-0Cq">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                    <rect key="frame" x="0.0" y="64" width="375" height="65"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Td1-1K-sUg">
-                            <rect key="frame" x="10" y="20" width="42" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Td1-1K-sUg">
+                            <rect key="frame" x="10" y="23.5" width="360" height="19.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mrz-6C-q2A">
-                            <rect key="frame" x="337" y="22" width="33" height="16"/>
+                            <rect key="frame" x="337" y="44.5" width="33" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -43,13 +44,14 @@
                     <constraints>
                         <constraint firstItem="Td1-1K-sUg" firstAttribute="leading" secondItem="bdk-mS-0Cq" secondAttribute="leading" constant="10" id="MHf-vy-aKQ"/>
                         <constraint firstAttribute="trailing" secondItem="mrz-6C-q2A" secondAttribute="trailing" constant="5" id="Pjf-BG-bfD"/>
-                        <constraint firstAttribute="height" constant="60" id="RBv-zA-nWQ"/>
-                        <constraint firstItem="mrz-6C-q2A" firstAttribute="centerY" secondItem="bdk-mS-0Cq" secondAttribute="centerY" id="UO8-aZ-f2a"/>
+                        <constraint firstAttribute="height" constant="65" id="RBv-zA-nWQ"/>
                         <constraint firstItem="Td1-1K-sUg" firstAttribute="centerY" secondItem="bdk-mS-0Cq" secondAttribute="centerY" id="WhL-dL-Zlz"/>
+                        <constraint firstItem="mrz-6C-q2A" firstAttribute="top" secondItem="Td1-1K-sUg" secondAttribute="bottom" constant="2" id="ZC0-oX-fc2"/>
+                        <constraint firstAttribute="trailing" secondItem="Td1-1K-sUg" secondAttribute="trailing" constant="5" id="hA2-Ts-ptL"/>
                     </constraints>
                 </view>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ODP-yK-CVB">
-                    <rect key="frame" x="0.0" y="61" width="375" height="200"/>
+                    <rect key="frame" x="0.0" y="130" width="375" height="200"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="200" id="qcQ-HB-jZR"/>
@@ -58,23 +60,23 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请提供相关信息的截图或照片" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tjf-bB-uqT">
-                    <rect key="frame" x="10" y="266" width="226" height="21"/>
+                    <rect key="frame" x="10" y="335" width="226" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3qa-pS-4zK" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="10" y="292" width="355" height="100"/>
+                    <rect key="frame" x="10" y="361" width="355" height="90"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="Tj4-Mo-Xcm"/>
+                        <constraint firstAttribute="height" constant="90" id="Tj4-Mo-Xcm"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="3qa-pS-4zK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="2BO-35-kBs"/>
-                <constraint firstItem="bdk-mS-0Cq" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="HGB-fY-5SG"/>
+                <constraint firstItem="bdk-mS-0Cq" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="HGB-fY-5SG"/>
                 <constraint firstItem="bdk-mS-0Cq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="VlZ-sB-1ks"/>
                 <constraint firstItem="ODP-yK-CVB" firstAttribute="top" secondItem="bdk-mS-0Cq" secondAttribute="bottom" constant="1" id="Zbm-PO-xtP"/>
                 <constraint firstAttribute="trailing" secondItem="bdk-mS-0Cq" secondAttribute="trailing" id="bqa-J5-ipC"/>
@@ -85,6 +87,7 @@
                 <constraint firstItem="Tjf-bB-uqT" firstAttribute="top" secondItem="ODP-yK-CVB" secondAttribute="bottom" constant="5" id="w2y-nc-yL7"/>
                 <constraint firstItem="ODP-yK-CVB" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="zNj-WY-XM9"/>
             </constraints>
+            <point key="canvasLocation" x="-232" y="-25"/>
         </view>
     </objects>
 </document>
