反馈的添加titile,content必传项功能;个人主页的starsView的数据植入添加;

--- a/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/PersonCore.storyboard
+++ b/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/PersonCore.storyboard
@@ -472,6 +472,7 @@
                         <outlet property="nickNameLabel" destination="Oyz-p8-faX" id="aiB-Ab-4eP"/>
                         <outlet property="photoImageView" destination="Ood-Zj-6od" id="hLE-ve-3YP"/>
                         <outlet property="projectSelectName" destination="Qmb-QH-hBt" id="EaG-DG-OXB"/>
+                        <outlet property="starView" destination="xp4-Yo-JXC" id="muY-7i-sKC"/>
                         <outlet property="userNameLabel" destination="OeV-ba-tFG" id="OmD-ru-qWQ"/>
                     </connections>
                 </viewController>
