--- a/OpticalValleyUnite/Classes/UI/Journal/ViewController/YQWorkOderComplete.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Journal/ViewController/YQWorkOderComplete.storyboard
@@ -43,7 +43,7 @@
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6c-zL-5oo">
                                                 <rect key="frame" x="0.0" y="5" width="187.5" height="55"/>
-                                                <state key="normal" title="已完成">
+                                                <state key="normal" title="已关闭">
                                                     <color key="titleColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
                                                 <state key="selected">
@@ -75,7 +75,7 @@
                                             </label>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b7E-2j-KGp">
                                                 <rect key="frame" x="0.0" y="5" width="187.5" height="55"/>
-                                                <state key="normal" title="未完成">
+                                                <state key="normal" title="待处理">
                                                     <color key="titleColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
                                                 <state key="selected">
